--- a/src/styles/MovieDetails.scss
+++ b/src/styles/MovieDetails.scss
@@ -45,6 +45,12 @@
         padding: 2px 6px;
         margin-top: 8px;
         margin-right: 10px;
+        transition: 0.2s ease-in;
+        &:hover {
+          cursor: pointer;
+          background-color: black;
+          color: white;
+        }
       }
       .score {
         font-size: 24px;
