--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -1,13 +1,15 @@
 .register {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: auto;
+  h1 {
+    margin-bottom: 20px;
+  }
+  form {
+    margin: 30px auto;
+    width: 30%;
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin: auto;
-
-    form {
-        width: 30%;
-        display: flex;
-        flex-direction: column;  
-    }
-
+  }
 }
