--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -1,11 +1,16 @@
 .login {
-    width: 80%;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: auto;
+  h1 {
     margin: auto;
-
-    form {
-        width: 30%;
-        display: flex;
-        flex-direction: column;  
-    }
-
+    margin-bottom: 20px;
+  }
+  form {
+    margin: auto;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+  }
 }
