--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -8,7 +8,7 @@
     margin-bottom: 20px;
   }
   form {
-    margin: auto;
+    margin: 30px auto;
     width: 30%;
     display: flex;
     flex-direction: column;
