--- a/src/styles/MovieDetails.scss
+++ b/src/styles/MovieDetails.scss
@@ -4,6 +4,21 @@
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     column-gap: 50px;
+
+    .wishlist-btn {
+      display: inline-block;
+      border: 1px solid black;
+      padding: 10px 20px;
+      background: gainsboro;
+      border-radius: 5px;
+      &:hover {
+        cursor: pointer;
+        background-color: black;
+        color: white;
+        transition: 0.3s ease;
+      }
+    }
+
     .movie-img {
       width: 100%;
     }
