--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,11 @@
   background-color: #191919;
   color: white;
 }
+
+.score-select {
+  width: 120px;
+}
+
+.score-submit {
+  margin-left: 44px;
+}
