--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -2,10 +2,13 @@
 
     .pageBar{
         // Yo peter, can you centre this thing its pissing me off 
-
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
         .pageButton{
             display: inline-block;
             border: 1px solid black;
+            margin: 0px 20px;
             padding: 10px 20px;
             background: gainsboro;
             border-radius: 5px;
