--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -8,7 +8,8 @@
         .pageButton{
             display: inline-block;
             border: 1px solid black;
-            margin: 0px 20px;
+            margin-left: 20px;
+            margin-right: 20px;
             padding: 10px 20px;
             background: gainsboro;
             border-radius: 5px;
