--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -12,5 +12,19 @@
     width: 30%;
     display: flex;
     flex-direction: column;
+    a {
+      color: #1f88e5;
+      font-size: 0.8rem;
+      margin-top: -10px;
+      margin-bottom: 1rem;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+    .rego {
+      font-size: 0.8rem;
+      text-align: center;
+      margin-top: 15px;
+    }
   }
 }
