--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -12,5 +12,16 @@
     width: 30%;
     display: flex;
     flex-direction: column;
+    .logon {
+      font-size: 0.8rem;
+      text-align: center;
+      margin-top: 15px;
+      a {
+        color: #1f88e5;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
   }
 }
