--- a/src/styles/ChangePass.scss
+++ b/src/styles/ChangePass.scss
@@ -1,11 +1,39 @@
 .change-passwords {
-    width: 80%;
-    margin: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 
-    form {
-        width: 30%;
-        display: flex;
-        flex-direction: column;  
+  form {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+
+    input {
+      height: 38px;
+      padding: 0.7rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      margin: 1rem 0;
+
+      &:focus {
+        outline: none;
+        border: 1px solid #1f88e5;
+      }
     }
 
+    button {
+      height: 38px;
+      border: 1px solid #1f88e5;
+      color: #1f88e5;
+      background-color: white;
+      border-radius: 3px;
+
+      &:hover {
+        cursor: pointer;
+        background-color: #1f89e598;
+        color: white;
+        transition: 0.2 ease;
+      }
+    }
+  }
 }
