--- a/src/styles/Wishlister.scss
+++ b/src/styles/Wishlister.scss
@@ -1,7 +1,6 @@
 .movie-list {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
 
   .movie-item {
     display: flex;
