--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,23 +1,26 @@
 .home {
-
-    .pageBar{
-        // Yo peter, can you centre this thing its pissing me off 
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        .pageButton{
-            display: inline-block;
-            border: 1px solid black;
-            margin: 0px 20px;
-            padding: 10px 20px;
-            background: gainsboro;
-            border-radius: 5px;
-            &:hover {
-                cursor: pointer;
-                background-color: black;
-                color: white;
-                transition: 0.3s ease;
-            }
-        }       
+  .pageBar {
+    // Yo peter, can you centre this thing its pissing me off
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem;
+    .pageButton {
+      display: inline-block;
+      font-family: "Poppins";
+      font-size: 1.2rem;
+      margin: 0px 20px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 50%;
+      outline: none;
+      &:hover {
+        cursor: pointer;
+        background-color: #333;
+        color: #fff;
+        transition: 0.3s ease;
+      }
     }
+  }
 }
