search actors bug fix

--- a/src/styles/MovieDetails.scss
+++ b/src/styles/MovieDetails.scss
@@ -52,6 +52,7 @@
       .bb {
         color: #1f88e5;
         margin-bottom: 1rem;
+        margin-right: 0.5rem;
         &:hover {
           text-decoration: underline;
           cursor: pointer;
